--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdk 36
 
     defaultConfig {
-        applicationId "com.emm.sounder.baizi"
+        applicationId "com.emm.sounder.keli"
         minSdk 23
         targetSdk 36
         versionCode 1
